fixed small normal article alignment

--- a/generaltech/scss/_normal_articles.scss
+++ b/generaltech/scss/_normal_articles.scss
@@ -9,6 +9,7 @@
   padding: $standard_sep;
 }
 .norm_article_cont {
+  width: 100%;
   max-width: $normal_articles_width;
   padding: $standard_sep 0;
   height: auto;
